--- a/docs/app/views/layouts/default.html
+++ b/docs/app/views/layouts/default.html
@@ -14,10 +14,10 @@
 	<mxvc id="vc-body"></mxvc>
     <div id="ribbon">
         <a href="https://github.com/limu/magix" target="_blank"><img src="http://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub"></a>
-    </div><!--
+    </div>
     <p>
     </p>
     <p id="copyright">
-    &copy;
-    </p>-->
+    &copy; 2011 magixjs.com All rights reserved.
+    </p>
 </div>
