--- a/docs/yuidoc/template/main.tmpl
+++ b/docs/yuidoc/template/main.tmpl
@@ -16,9 +16,9 @@
 
 <div id="doc3" class="yui-t2">
 	<div id="hd">
-        <h1><a href="../" title="MagixJS">MagixJS</a></h1>
+        <h1><a href="index.html" title="MagixJS">MagixJS API DOC</a></h1>
         <h3>$moduletitle&nbsp; <span class="subtitle">$version</span></h3>
-        <a href="../" title="MagixJS">MagixJS</a> 
+        <a href="index.html" title="MagixJS">MagixJS API</a> 
         #if $modulename
             &gt; <a href="./${cleansedmodulename}.html" title="$modulename">$modulename</a>
                 #if $classname# &gt; $classname #end if#
