--- a/docs/app/views/layouts/default.html
+++ b/docs/app/views/layouts/default.html
@@ -1,5 +1,5 @@
 <div id="content">
-    <h1><a href="#"><span class="logo">MaigxJS</span><span class="byline">OPOA, Now! </span></a></h1>
+    <h1><a href="#"><span class="logo">MagixJS</span><span class="byline">OPOA, Now! </span></a></h1>
     <ul id="menu">
         <li>
             文档
