--- a/docs/yuidoc/template/main.tmpl
+++ b/docs/yuidoc/template/main.tmpl
@@ -50,7 +50,7 @@
                     <div class="summary description">
                       This is the API documentation for the 
                       <a href="../">MagixJS</a>.
-                      <p>Choose a module name from the list for more information.</p>
+                      You should begin with the module:<a href="module_magix.html">magix</a>
                     </div>
 
                 #end if
