--- a/docs/app/views/mvc.html
+++ b/docs/app/views/mvc.html
@@ -1,3 +1,9 @@
+<h2> Magix MVC</h2>
+<p class="description">
+    1、MagixJS弱化Controller,让url能够通过Router快速对应到Root View.</br>
+    2、MagixJS由View代替Controller负责获取数据;View还负责渲染视图、注册交互事件、驱动其子View的渲染.</br>
+</p>
+<div id="show-mvc"><img src="../docs/assets/mvc.png"></div>
 <p class="next-page">
     下一节：<a href="#!/hellomagix/">快速构建一个Magix应用</a>
 </p>
