--- a/docs/app/views/home.html
+++ b/docs/app/views/home.html
@@ -1,5 +1,5 @@
 <h2 id="index">文档目录</h2>
-<ul>
+<ul class="sub-menu">
     <li>
         <a href="#!/mvc/">Magix MVC</a>
     </li>
@@ -10,19 +10,22 @@
         <a href="#!/router/">Url Route规则</a>
     </li>
 </ul>
-<h2 id="api"><a href="api/" target="_blank">API文档</a></h2>
+<h2 id="api" ><a href="api/" target="_blank">API文档</a></h2>
 <h2 id="thirdpartys">外部依赖</h2>
-<ul>
+<ul class="sub-menu">
     <li>
-        <a href="http://documentcloud.github.com/backbone/" target="_blank">Backbone.js(0.3.3)</a>
+        <a href="http://documentcloud.github.com/backbone/" target="_blank">Backbone.js</a>
     </li>
     <li>
-        <a href="http://documentcloud.github.com/underscore/" target="_blank">Underscore.js(1.1.6)</a>
+        <a href="http://documentcloud.github.com/underscore/" target="_blank">Underscore.js</a>
     </li>
     <li>
-        <a href="http://seajs.com/" target="_blank">SeaJS(0.9.3)</a>
+        <a href="http://seajs.com/" target="_blank">SeaJS</a>
     </li>
     <li>
-        <a href="https://github.com/janl/mustache.js" target="_blank">Mustache(0.3.1-dev)</a>
+        <a href="https://github.com/janl/mustache.js" target="_blank">Mustache</a>
+    </li>
+    <li>
+        <a href="https://jquery.com/" target="_blank">JQuery</a>(Backbone依赖JQuery,可解耦)
     </li>
 </ul>
