--- a/docs/app/views/layouts/default.html
+++ b/docs/app/views/layouts/default.html
@@ -1,23 +1,24 @@
 <div id="content">
-    <h1><a href="#"><span class="logo">MagixJS</span><span class="byline">OPOA, Now! </span></a></h1>
+    <h1><a href="#"><span class="logo">MagixJS</span></a></h1>
     <ul id="menu">
         <li>
-            文档
+            <a href="" id="docbtn">文档</a>
         </li>
         <li>
-            <a href="api/">API</a>
+            <a target="_blank" href="api/" id="apibtn">API</a>
         </li>
         <li>
-            <a href="https://github.com/limu/magix">源码</a>
+            <a target="_blank" href="https://github.com/limu/magix" id="codebtn">源码</a>
         </li>
     </ul>
-	<mxvc id="vc-body"></mxvc>
-    <div id="ribbon">
-        <a href="https://github.com/limu/magix" target="_blank"><img src="http://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub"></a>
-    </div>
-    <p>
-    </p>
+    <mxvc id="vc-body">
+    </mxvc>
+	<mxvc id="vc-body1">
+    </mxvc>
     <p id="copyright">
-    &copy; 2011 magixjs.com All rights reserved.
+       Copyright &copy; 2011 magixjs.com All rights reserved.
     </p>
+</div>
+<div id="ribbon">
+        <a href="https://github.com/limu/magix" target="_blank"></a>
 </div>
