--- a/docs/assets/highlight.css
+++ b/docs/assets/highlight.css
@@ -38,6 +38,7 @@ pre.sh_sourceCode .sh_specialchar {
 pre.sh_sourceCode .sh_comment {
   color: #000000;
   font-weight: normal;
+  font: 14px / 24px "Lucida Grande", Helvetica, "Microsoft YaHei", Arial, sans-serif;
   font-style: italic;
 }
 
