调整router vframe view vom等，新增模板引擎
Signed-off-by: xinglie <xinglie.lkf@taobao.com>

--- a/examples/01hellomagix/kissy/app/views/home.html
+++ b/examples/01hellomagix/kissy/app/views/home.html
@@ -1,3 +1,20 @@
-Hello Magix!{{query.a}}__
+Hello Magix!
 
-{{tester_list}}
+<#console.log(this)#>
+<#for(var i=10;i<20;i++){#>
+	index:<#=i#>
+	<br />
+<#}#>
+<script type="text/notRenderTemplate">
+<#for(var i=0;i<10;i++){#>
+ <#=i#>
+<#}#>
+</script>
+adfasdf
+
+
+<script type="text/notRenderTemplate">
+<#for(var i=0;i<10;i++){#>
+ <#=i#>
+<#}#>
+</script>
