修正配置地址问题，拆分delegateEvents
Signed-off-by: xinglie <xinglie.lkf@taobao.com>

--- a/examples/01hellomagix/kissy/app/views/home.html
+++ b/examples/01hellomagix/kissy/app/views/home.html
@@ -9,9 +9,9 @@ Hello Magix!
 <#for(var i=0;i<10;i++){#>
  <#=i#>
 <#}#>
-</script>
+</script>w
 adfasdf
-
+wwwqwrytyuu
 
 <script type="text/notRenderTemplate">
 <#for(var i=0;i<10;i++){#>
