router.navigateTo增加对对象的支持，方便编码
Signed-off-by: xinglie <xinglie.lkf@taobao.com>

--- a/examples/01hellomagix/kissy/app/views/home.html
+++ b/examples/01hellomagix/kissy/app/views/home.html
@@ -12,7 +12,7 @@ Hello Magix!
 </script>w
 adfasdf
 wwwqwrytyuu
-
+<input type="button" value="change" mxclick="changeHash" />
 <script type="text/notRenderTemplate">
 <#for(var i=0;i<10;i++){#>
  <#=i#>
