--- a/seed/app/views/home/index.html
+++ b/seed/app/views/home/index.html
@@ -2,3 +2,5 @@
 
 <input type="button" value="changeView" mx-click="changeView" />
 <input type="button" value="changeHash" mx-click="changeHash" />
+
+<div id="T1"></div><div id="T2"></div>
