--- a/seed/app/views/default.html
+++ b/seed/app/views/default.html
@@ -1,4 +1,4 @@
-<vframe mx-view="~seed/app/views/header" id="magix_vf_header"></vframe>
+<vframe mx-view="app/views/header" id="magix_vf_header"></vframe>
 <div class="clearfix">
 	<div class="main">
 		<div class="inmain">
@@ -9,6 +9,6 @@
 		    </vframe>
 		</div>
 	</div>
-	<vframe id="magix_vf_menu" mx-view="~seed/app/views/menu"></vframe>
+	<vframe id="magix_vf_menu" mx-view="app/views/menu"></vframe>
 </div>
-<vframe mx-view="~seed/app/views/footer"></vframe>
+<vframe mx-view="app/views/footer"></vframe>
