--- a/seed/app/views/home/test.html
+++ b/seed/app/views/home/test.html
@@ -3,8 +3,8 @@
 groupId:{{groupId}}
 {{showVf}}
 {{#showVf}}
-<vframe mx-view="~seed/app/views/404"></vframe>
+<vframe mx-view="app/views/404"></vframe>
 {{/showVf}}
-<vframe mx-view="~seed/app/views/404"></vframe>
+<vframe mx-view="app/views/404"></vframe>
 <input type="button" value="change" mx-click="change" />
 </div>
