prepare for mobile and new version

--- a/seed/app/views/default.html
+++ b/seed/app/views/default.html
@@ -1,4 +1,4 @@
-<vframe mx-view="app/views/header" id="magix_vf_header"></vframe>
+<div mx-view="app/views/header" id="magix_vf_header"></div>
 <div class="clearfix">
 	<div class="main">
 		<div class="inmain">
