--- a/docs/apiapp/mviews/partials/menus.html
+++ b/docs/apiapp/mviews/partials/menus.html
@@ -1,7 +1,7 @@
 mobile
 core list:<br />
 {{#coreList}}
-    <a href="#!/{{infos.loader}}/{{infos.ver}}/{{name}}?anim=slideLeft">{{dName}}</a><br />
+    <a href="#!/{{infos.loader}}/{{infos.ver}}/{{name}}">{{dName}}</a><br />
 {{/coreList}}
 
 ext list:<br />
