--- a/ad-demo/app/views/partials/menus.html
+++ b/ad-demo/app/views/partials/menus.html
@@ -12,16 +12,16 @@
 				<li class="subnav-list">
 					<a class="text" href="#!/brixes/dialog">弹出框</a>
 				</li>
+				<li class="subnav-list">
+					<a class="text" href="#!/brixes/dropdown">下拉框</a>
+				</li>
 			</ul>
 		</li>
 		<li class="topnav-list">
 			<a href="#" mx-click="toggleSubMenus<prevent>"> <i class="iconfont">&#402;</i> 应用示例 </a>
 			<ul class="subnav none">
 				<li class="subnav-list">
-					<a class="text" href="#!/examples/basetable">基础表格</a>
-				</li>
-				<li class="subnav-list">
-					<a class="text" href="#!/account/finance">带排序的表格</a>
+					<a class="text" href="#!/examples/table-sortable">带排序的表格</a>
 				</li>
 			</ul>
 		</li>
