--- a/ad-demo/app/views/partials/menus.html
+++ b/ad-demo/app/views/partials/menus.html
@@ -23,6 +23,9 @@
 				<li class="subnav-list">
 					<a class="text" href="#!/examples/table-sortable">带排序的表格</a>
 				</li>
+				<li class="subnav-list">
+					<a class="text" href="#!/examples/renderer">使用renderer渲染</a>
+				</li>
 			</ul>
 		</li>
 	</ul>
